add file in folder HW_01

--- a/newproject/lection02/templates/about.html
+++ b/newproject/lection02/templates/about.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-  <!-- <link rel="stylesheet" href="/static/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
     <title>{{ title }}</title>
 </head>
@@ -11,6 +11,6 @@
     <img src="{{ url_for('static', filename='image/foto.jpg') }}" alt="Мое фото" width="300">
     <p class="text-body text-justify">Lorem ipsum</p>
     <p class="allert-dark">Все права защищены @</p>
-<!--    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>-->
+    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
 </body>
 </html>
