--- a/Flask_f/HW_03/templates/okreg.html
+++ b/Flask_f/HW_03/templates/okreg.html
@@ -5,5 +5,5 @@ Good
 {% endblock %}
 
 {% block content %}
-<h1 class="good">Hello, {{ name }}!</h1>
+<h1 class="greeting">Hello, {{ name }}!</h1>
 {% endblock %}
